# cxx-playground

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  _doxygen.config  build.sh  doxygen.config  pimpl.io-clang-plugin.sublime-project  rebuild.sh  run-cscope.sh
cmake/modules/: dude_please_dump_cmake_variables.cmake
experiments/: CMakeLists.txt
experiments/006/: PimplIOVisitor.cpp
experiments/008/: PimplIOVisitor.hpp  TraverseTUnitAction.cpp  clong.cpp
experiments/008/visitors/: XDeclaratorDecl.cpp  XFieldDecl.cpp
experiments/009-scratch-stub/: main.cpp
experiments/010/: TypeResolver.cpp  clong-decl.cpp  clong-lmdb.cpp  clong-translation-unit-decl.cpp
experiments/X11/: CMakeLists.txt  xlib1.cpp
experiments/clang-experiments/008/: Dummy.cpp  TraverseTUnitConsumer.cpp
experiments/clang-experiments/008/visitors/: XDecl.cpp  XNamedDecl.cpp  XNamespaceDecl.cpp
experiments/clang-experiments/010/: Repository.hpp
experiments/misc/: syscall1.cpp
lib/: CMakeLists.txt
src/: CMakeLists.txt
src/clong/: CMakeLists.txt
src/clong/find-all-symbols/: CMakeLists.txt
src/clong/find-all-symbols/tool/: CMakeLists.txt  FindAllSymbolsMain.cpp
src/di/: container.cpp  container.hpp  dependency.hpp  dll_service_provider.cpp  dll_service_provider.hpp  service_provider.hpp  typedefs.hpp
src/dic-modules/asio/: IoService.cpp  module-boost-asio.cpp  module-boost-asio.hpp
src/dic-modules/http/: module-http-server.hpp
src/dude/: CMakeLists.txt  xcb+.hpp
src/dude/clang/: ClangAstConsumer.hpp  TypePrinter.cpp  TypePrinter.hpp
src/dude/clang/PrintFunctionNames/: CMakeLists.txt
src/dude/clong/: CMakeLists.txt  Clong.cpp  Clong.hpp  ClongPluginASTAction.cpp  ClongPluginASTAction.hpp  PQXXHelper.hpp  Repository.cpp  Repository.hpp  TypeResolver.cpp  TypeResolver.hpp  clong-db-init.cpp  clong-decl.cpp  clong-namespace-decl.cpp  clong-translation-unit-decl.cpp  clong-typedefs.cpp  lmdb.hpp  types.hpp
src/dude/clong/cmake/modules/: dude_please_dump_cmake_variables.cmake
src/dude/clong/experiments/: CMakeLists.txt
src/dude/clong/experiments/006/: Dummy.cpp  PimplIOVisitor.hpp  TraverseTUnitConsumer.cpp
src/dude/clong/experiments/007/: PimplIOVisitor.cpp  PimplIOVisitor.hpp  TraverseTUnitAction.cpp
src/dude/clong/experiments/007/visitors/: FunctionVisitor.cpp
src/dude/clong/experiments/008/: PimplIOVisitor.cpp  TypeResolver.cpp
src/dude/clong/experiments/008/visitors/: XBase.cpp  XFunctionDecl.cpp  XTranslationUnitDecl.cpp  XTypeDecl.cpp  XValueDecl.cpp  XVarDecl.cpp
src/dude/clong/experiments/009-scratch-stub/: Clong.cpp  ClongPluginASTAction.cpp
src/dude/clong/experiments/010/: CMakeLists.txt  Clong.cpp  ClongPluginASTAction.cpp  PPCallbacksTracker.cpp  clong-namespace-decl.cpp  clong-translation-unit-decl.cpp  clong-typedefs.cpp
src/dude/clong/resources/: data-fixtures.sql
src/dude/clong/src/clong/: Terminal.cpp
src/dude/clong/src/clong/clang/: TypePrinter.cpp
src/dude/clong/src/clong/plugin/: CodeRepository.hpp
src/dude/di/: base_definition.hpp  container.cpp  service_definition.hpp  type_info.hpp  typedefs.hpp
src/dude/di/dic-modules/http/: module-http-server.hpp
src/dude/dumbster/: fragments.cpp  main.cpp  parser.cpp
src/dude/filesystem/: file.hpp
src/dude/frog/: frog.hpp
src/dude/hacks/: CMakeLists.txt  routines.cpp
src/dude/lexer/: token.cpp
src/dude/llvm/: MapVector.hpp
src/dude/lmdb/: lmdb++.h
src/dude/maths/: rectangle.hpp
src/dude/surface/: CMakeLists.txt  main.cpp
src/dude/surface/cairo/: cairo.hpp  surface.cpp  surface.hpp
src/dude/surface/maths/: dimensions.hpp  rectangle.hpp
src/dude/surface/tests/: xcb-window-cairo1.cpp  xcb-window-cairo2.cpp  xcb-window.cpp
src/dude/surface/text/: TextBuffer.cpp  TextBuffer.hpp  TextBuffers.cpp
src/dude/surface/ui/: elements.cpp  elements.hpp  surface.cpp  surface.hpp
src/dude/util/: CMakeLists.txt  Terminal.cpp  logging.hpp
src/dude/xcbx/: events.hpp  exceptions.hpp  window.cpp  window.hpp  xcb.hpp
src/dumbster/: CMakeLists.txt  fragments.hpp  main.cpp  parser.cpp  parser.hpp
src/filesystem/: file.cpp  file.hpp
src/frog/: CMakeLists.txt  frog.cpp  main.cpp
src/hacks/: hack_cxa_throw_exception.cpp
src/lexer/: fragments.hpp  lexer.cpp  lexer.hpp  token.cpp  token.hpp
src/maths/: dimensions.hpp
src/nstd/: CMakeLists.txt  File.cpp  File.hpp  Process.cpp  Process.h  Process.hpp  Signal.hpp  Stream.hpp  String.hpp  Syscall.h  Time.h  _start.cpp  grepmusl.sh  numeric_limits.hpp  types.h  types.hpp
src/nstd/String/: length.cpp  strlen.cpp  test_length.cpp
src/nstd/c/: _start.cpp  _start.h  assert.cpp  assert.h  memset.cpp
src/nstd/c/eh/: unwind.cpp  unwind.hpp
src/nstd/drm/: kms.cpp  kms.hpp
src/nstd/eh/: cxa.cpp  cxa.hpp
src/nstd/kernel/linux/: Process.hpp  Signal.hpp  Stream.hpp  Syscall.hpp  errno.hpp
src/nstd/malloc/: malloc.cpp  malloc.h
src/nstd/string/: strlen.cpp
src/nstd/tests/: test001.cpp  test_aab.cpp  test_aac.cpp  test_aad.cpp  test_aae.cpp  test_sys_open.cpp
src/nstd/unwind/: unwind.cpp  unwind.hpp
src/surface/xcb/: xcb.cpp
src/symf/: CMakeLists.txt  symf_main.cpp
src/util/: exceptions.hpp  logging.hpp  would_you_please.cpp
src/xcb/: CMakeLists.txt  events.cpp  events.hpp  inline-decls.hpp  mask_values.hpp  window.cpp  window.hpp  xcb.cpp  xcb.hpp
src/xcbx/: events.cpp  exceptions.hpp  inline-decls.hpp  mask_values.hpp  window.cpp  window.hpp  xcb.cpp  xcb.hpp
tutu/: term-01.cpp
